# serializer version: 1
# name: test_device_types[backgroundlight_ct]
  ReadOnlyDict({
    'brightness': 204,
    'color_mode': <ColorMode.COLOR_TEMP: 'color_temp'>,
    'color_temp_kelvin': 5000,
    'effect': None,
    'effect_list': list([
      'Strobe color',
      'Police',
      'Christmas',
      'RGB',
      'Random Loop',
      'Fast Random Loop',
      'LSD',
      'Slowdown',
      'Night Mode',
      'Date Night',
      'Movie',
      'Sunrise',
      'Sunset',
      'Romance',
      'Happy Birthday',
      'Disco',
      'Strobe epilepsy!',
      'Alarm',
      'Police2',
      'WhatsApp',
      'Facebook',
      'Twitter',
      'Home',
      'Candle Flicker',
      'Tea Time',
      'Slow Temp',
      'Stop',
    ]),
    'flowing': False,
    'friendly_name': 'Yeelight Color 0x15243f Ambilight',
    'hs_color': tuple(
      27.001,
      19.243,
    ),
    'max_color_temp_kelvin': 6500,
    'min_color_temp_kelvin': 1700,
    'music_mode': False,
    'night_light': False,
    'rgb_color': tuple(
      255,
      228,
      206,
    ),
    'supported_color_modes': list([
      <ColorMode.COLOR_TEMP: 'color_temp'>,
      <ColorMode.HS: 'hs'>,
      <ColorMode.RGB: 'rgb'>,
    ]),
    'supported_features': <LightEntityFeature: 44>,
    'xy_color': tuple(
      0.371,
      0.349,
    ),
  })
# ---
# name: test_device_types[backgroundlight_hs]
  ReadOnlyDict({
    'brightness': 204,
    'color_mode': <ColorMode.HS: 'hs'>,
    'color_temp_kelvin': None,
    'effect': None,
    'effect_list': list([
      'Strobe color',
      'Police',
      'Christmas',
      'RGB',
      'Random Loop',
      'Fast Random Loop',
      'LSD',
      'Slowdown',
      'Night Mode',
      'Date Night',
      'Movie',
      'Sunrise',
      'Sunset',
      'Romance',
      'Happy Birthday',
      'Disco',
      'Strobe epilepsy!',
      'Alarm',
      'Police2',
      'WhatsApp',
      'Facebook',
      'Twitter',
      'Home',
      'Candle Flicker',
      'Tea Time',
      'Slow Temp',
      'Stop',
    ]),
    'flowing': False,
    'friendly_name': 'Yeelight Color 0x15243f Ambilight',
    'hs_color': tuple(
      200,
      70,
    ),
    'max_color_temp_kelvin': 6500,
    'min_color_temp_kelvin': 1700,
    'music_mode': False,
    'night_light': False,
    'rgb_color': tuple(
      77,
      195,
      255,
    ),
    'supported_color_modes': list([
      <ColorMode.COLOR_TEMP: 'color_temp'>,
      <ColorMode.HS: 'hs'>,
      <ColorMode.RGB: 'rgb'>,
    ]),
    'supported_features': <LightEntityFeature: 44>,
    'xy_color': tuple(
      0.168,
      0.247,
    ),
  })
# ---
# name: test_device_types[backgroundlight_rgb]
  ReadOnlyDict({
    'brightness': 204,
    'color_mode': <ColorMode.RGB: 'rgb'>,
    'color_temp_kelvin': None,
    'effect': None,
    'effect_list': list([
      'Strobe color',
      'Police',
      'Christmas',
      'RGB',
      'Random Loop',
      'Fast Random Loop',
      'LSD',
      'Slowdown',
      'Night Mode',
      'Date Night',
      'Movie',
      'Sunrise',
      'Sunset',
      'Romance',
      'Happy Birthday',
      'Disco',
      'Strobe epilepsy!',
      'Alarm',
      'Police2',
      'WhatsApp',
      'Facebook',
      'Twitter',
      'Home',
      'Candle Flicker',
      'Tea Time',
      'Slow Temp',
      'Stop',
    ]),
    'flowing': False,
    'friendly_name': 'Yeelight Color 0x15243f Ambilight',
    'hs_color': tuple(
      120.0,
      100.0,
    ),
    'max_color_temp_kelvin': 6500,
    'min_color_temp_kelvin': 1700,
    'music_mode': False,
    'night_light': False,
    'rgb_color': tuple(
      0,
      255,
      0,
    ),
    'supported_color_modes': list([
      <ColorMode.COLOR_TEMP: 'color_temp'>,
      <ColorMode.HS: 'hs'>,
      <ColorMode.RGB: 'rgb'>,
    ]),
    'supported_features': <LightEntityFeature: 44>,
    'xy_color': tuple(
      0.172,
      0.747,
    ),
  })
# ---
# name: test_device_types[color_ct]
  ReadOnlyDict({
    'brightness': 128,
    'color_mode': <ColorMode.COLOR_TEMP: 'color_temp'>,
    'color_temp_kelvin': 4000,
    'effect': None,
    'effect_list': list([
      'Strobe color',
      'Police',
      'Christmas',
      'RGB',
      'Random Loop',
      'Fast Random Loop',
      'LSD',
      'Slowdown',
      'Night Mode',
      'Date Night',
      'Movie',
      'Sunrise',
      'Sunset',
      'Romance',
      'Happy Birthday',
      'Disco',
      'Strobe epilepsy!',
      'Alarm',
      'Police2',
      'WhatsApp',
      'Facebook',
      'Twitter',
      'Home',
      'Candle Flicker',
      'Tea Time',
      'Slow Temp',
      'Stop',
    ]),
    'flowing': False,
    'friendly_name': 'Yeelight Color 0x15243f',
    'hs_color': tuple(
      26.812,
      34.87,
    ),
    'max_color_temp_kelvin': 6500,
    'min_color_temp_kelvin': 1700,
    'music_mode': False,
    'night_light': False,
    'rgb_color': tuple(
      255,
      206,
      166,
    ),
    'supported_color_modes': list([
      <ColorMode.COLOR_TEMP: 'color_temp'>,
      <ColorMode.HS: 'hs'>,
      <ColorMode.RGB: 'rgb'>,
    ]),
    'supported_features': <LightEntityFeature: 44>,
    'xy_color': tuple(
      0.42,
      0.365,
    ),
  })
# ---
# name: test_device_types[color_ct][color_ct_nightlight_entity]
  ReadOnlyDict({
    'color_mode': <ColorMode.ONOFF: 'onoff'>,
    'flowing': False,
    'friendly_name': 'Yeelight Color 0x15243f Nightlight',
    'music_mode': False,
    'night_light': True,
    'supported_color_modes': list([
      <ColorMode.ONOFF: 'onoff'>,
    ]),
    'supported_features': <LightEntityFeature: 0>,
  })
# ---
# name: test_device_types[color_ct][color_ct_nightlight_mode]
  ReadOnlyDict({
    'brightness': 59,
    'color_mode': <ColorMode.COLOR_TEMP: 'color_temp'>,
    'color_temp_kelvin': 1700,
    'effect': None,
    'effect_list': list([
      'Strobe color',
      'Police',
      'Christmas',
      'RGB',
      'Random Loop',
      'Fast Random Loop',
      'LSD',
      'Slowdown',
      'Night Mode',
      'Date Night',
      'Movie',
      'Sunrise',
      'Sunset',
      'Romance',
      'Happy Birthday',
      'Disco',
      'Strobe epilepsy!',
      'Alarm',
      'Police2',
      'WhatsApp',
      'Facebook',
      'Twitter',
      'Home',
      'Candle Flicker',
      'Tea Time',
      'Slow Temp',
      'Stop',
    ]),
    'flowing': False,
    'friendly_name': 'Yeelight Color 0x15243f',
    'hs_color': tuple(
      28.401,
      100.0,
    ),
    'max_color_temp_kelvin': 6500,
    'min_color_temp_kelvin': 1700,
    'music_mode': False,
    'night_light': True,
    'rgb_color': tuple(
      255,
      121,
      0,
    ),
    'supported_color_modes': list([
      <ColorMode.COLOR_TEMP: 'color_temp'>,
      <ColorMode.HS: 'hs'>,
      <ColorMode.RGB: 'rgb'>,
    ]),
    'supported_features': <LightEntityFeature: 44>,
    'xy_color': tuple(
      0.62,
      0.368,
    ),
  })
# ---
# name: test_device_types[color_hsv]
  ReadOnlyDict({
    'brightness': 128,
    'color_mode': <ColorMode.HS: 'hs'>,
    'color_temp_kelvin': None,
    'effect': None,
    'effect_list': list([
      'Strobe color',
      'Police',
      'Christmas',
      'RGB',
      'Random Loop',
      'Fast Random Loop',
      'LSD',
      'Slowdown',
      'Night Mode',
      'Date Night',
      'Movie',
      'Sunrise',
      'Sunset',
      'Romance',
      'Happy Birthday',
      'Disco',
      'Strobe epilepsy!',
      'Alarm',
      'Police2',
      'WhatsApp',
      'Facebook',
      'Twitter',
      'Home',
      'Candle Flicker',
      'Tea Time',
      'Slow Temp',
      'Stop',
    ]),
    'flowing': False,
    'friendly_name': 'Yeelight Color 0x15243f',
    'hs_color': tuple(
      100,
      35,
    ),
    'max_color_temp_kelvin': 6500,
    'min_color_temp_kelvin': 1700,
    'music_mode': False,
    'night_light': False,
    'rgb_color': tuple(
      195,
      255,
      166,
    ),
    'supported_color_modes': list([
      <ColorMode.COLOR_TEMP: 'color_temp'>,
      <ColorMode.HS: 'hs'>,
      <ColorMode.RGB: 'rgb'>,
    ]),
    'supported_features': <LightEntityFeature: 44>,
    'xy_color': tuple(
      0.31,
      0.45,
    ),
  })
# ---
# name: test_device_types[color_hsv][color_hsv_nightlight_entity]
  ReadOnlyDict({
    'color_mode': <ColorMode.ONOFF: 'onoff'>,
    'flowing': False,
    'friendly_name': 'Yeelight Color 0x15243f Nightlight',
    'music_mode': False,
    'night_light': True,
    'supported_color_modes': list([
      <ColorMode.ONOFF: 'onoff'>,
    ]),
    'supported_features': <LightEntityFeature: 0>,
  })
# ---
# name: test_device_types[color_hsv_no_hue]
  ReadOnlyDict({
    'brightness': 128,
    'color_mode': <ColorMode.HS: 'hs'>,
    'color_temp_kelvin': None,
    'effect': None,
    'effect_list': list([
      'Strobe color',
      'Police',
      'Christmas',
      'RGB',
      'Random Loop',
      'Fast Random Loop',
      'LSD',
      'Slowdown',
      'Night Mode',
      'Date Night',
      'Movie',
      'Sunrise',
      'Sunset',
      'Romance',
      'Happy Birthday',
      'Disco',
      'Strobe epilepsy!',
      'Alarm',
      'Police2',
      'WhatsApp',
      'Facebook',
      'Twitter',
      'Home',
      'Candle Flicker',
      'Tea Time',
      'Slow Temp',
      'Stop',
    ]),
    'flowing': False,
    'friendly_name': 'Yeelight Color 0x15243f',
    'hs_color': None,
    'max_color_temp_kelvin': 6500,
    'min_color_temp_kelvin': 1700,
    'music_mode': False,
    'night_light': False,
    'rgb_color': None,
    'supported_color_modes': list([
      <ColorMode.COLOR_TEMP: 'color_temp'>,
      <ColorMode.HS: 'hs'>,
      <ColorMode.RGB: 'rgb'>,
    ]),
    'supported_features': <LightEntityFeature: 44>,
    'xy_color': None,
  })
# ---
# name: test_device_types[color_hsv_no_hue][color_hsv_no_hue_nightlight_entity]
  ReadOnlyDict({
    'color_mode': <ColorMode.ONOFF: 'onoff'>,
    'flowing': False,
    'friendly_name': 'Yeelight Color 0x15243f Nightlight',
    'music_mode': False,
    'night_light': True,
    'supported_color_modes': list([
      <ColorMode.ONOFF: 'onoff'>,
    ]),
    'supported_features': <LightEntityFeature: 0>,
  })
# ---
# name: test_device_types[color_rgb]
  ReadOnlyDict({
    'brightness': 128,
    'color_mode': <ColorMode.RGB: 'rgb'>,
    'color_temp_kelvin': None,
    'effect': None,
    'effect_list': list([
      'Strobe color',
      'Police',
      'Christmas',
      'RGB',
      'Random Loop',
      'Fast Random Loop',
      'LSD',
      'Slowdown',
      'Night Mode',
      'Date Night',
      'Movie',
      'Sunrise',
      'Sunset',
      'Romance',
      'Happy Birthday',
      'Disco',
      'Strobe epilepsy!',
      'Alarm',
      'Police2',
      'WhatsApp',
      'Facebook',
      'Twitter',
      'Home',
      'Candle Flicker',
      'Tea Time',
      'Slow Temp',
      'Stop',
    ]),
    'flowing': False,
    'friendly_name': 'Yeelight Color 0x15243f',
    'hs_color': tuple(
      0.0,
      100.0,
    ),
    'max_color_temp_kelvin': 6500,
    'min_color_temp_kelvin': 1700,
    'music_mode': False,
    'night_light': False,
    'rgb_color': tuple(
      255,
      0,
      0,
    ),
    'supported_color_modes': list([
      <ColorMode.COLOR_TEMP: 'color_temp'>,
      <ColorMode.HS: 'hs'>,
      <ColorMode.RGB: 'rgb'>,
    ]),
    'supported_features': <LightEntityFeature: 44>,
    'xy_color': tuple(
      0.701,
      0.299,
    ),
  })
# ---
# name: test_device_types[color_rgb][color_rgb_nightlight_entity]
  ReadOnlyDict({
    'color_mode': <ColorMode.ONOFF: 'onoff'>,
    'flowing': False,
    'friendly_name': 'Yeelight Color 0x15243f Nightlight',
    'music_mode': False,
    'night_light': True,
    'supported_color_modes': list([
      <ColorMode.ONOFF: 'onoff'>,
    ]),
    'supported_features': <LightEntityFeature: 0>,
  })
# ---
# name: test_device_types[color_rgb_no_color]
  ReadOnlyDict({
    'brightness': 128,
    'color_mode': <ColorMode.RGB: 'rgb'>,
    'color_temp_kelvin': None,
    'effect': None,
    'effect_list': list([
      'Strobe color',
      'Police',
      'Christmas',
      'RGB',
      'Random Loop',
      'Fast Random Loop',
      'LSD',
      'Slowdown',
      'Night Mode',
      'Date Night',
      'Movie',
      'Sunrise',
      'Sunset',
      'Romance',
      'Happy Birthday',
      'Disco',
      'Strobe epilepsy!',
      'Alarm',
      'Police2',
      'WhatsApp',
      'Facebook',
      'Twitter',
      'Home',
      'Candle Flicker',
      'Tea Time',
      'Slow Temp',
      'Stop',
    ]),
    'flowing': False,
    'friendly_name': 'Yeelight Color 0x15243f',
    'hs_color': None,
    'max_color_temp_kelvin': 6500,
    'min_color_temp_kelvin': 1700,
    'music_mode': False,
    'night_light': False,
    'rgb_color': None,
    'supported_color_modes': list([
      <ColorMode.COLOR_TEMP: 'color_temp'>,
      <ColorMode.HS: 'hs'>,
      <ColorMode.RGB: 'rgb'>,
    ]),
    'supported_features': <LightEntityFeature: 44>,
    'xy_color': None,
  })
# ---
# name: test_device_types[color_rgb_no_color][color_rgb_no_color_nightlight_entity]
  ReadOnlyDict({
    'color_mode': <ColorMode.ONOFF: 'onoff'>,
    'flowing': False,
    'friendly_name': 'Yeelight Color 0x15243f Nightlight',
    'music_mode': False,
    'night_light': True,
    'supported_color_modes': list([
      <ColorMode.ONOFF: 'onoff'>,
    ]),
    'supported_features': <LightEntityFeature: 0>,
  })
# ---
# name: test_device_types[color_unsupported]
  ReadOnlyDict({
    'brightness': None,
    'color_mode': <ColorMode.UNKNOWN: 'unknown'>,
    'color_temp_kelvin': None,
    'effect': None,
    'effect_list': list([
      'Strobe color',
      'Police',
      'Christmas',
      'RGB',
      'Random Loop',
      'Fast Random Loop',
      'LSD',
      'Slowdown',
      'Night Mode',
      'Date Night',
      'Movie',
      'Sunrise',
      'Sunset',
      'Romance',
      'Happy Birthday',
      'Disco',
      'Strobe epilepsy!',
      'Alarm',
      'Police2',
      'WhatsApp',
      'Facebook',
      'Twitter',
      'Home',
      'Candle Flicker',
      'Tea Time',
      'Slow Temp',
      'Stop',
    ]),
    'flowing': False,
    'friendly_name': 'Yeelight Color 0x15243f',
    'hs_color': None,
    'max_color_temp_kelvin': 6500,
    'min_color_temp_kelvin': 1700,
    'music_mode': False,
    'night_light': False,
    'rgb_color': None,
    'supported_color_modes': list([
      <ColorMode.COLOR_TEMP: 'color_temp'>,
      <ColorMode.HS: 'hs'>,
      <ColorMode.RGB: 'rgb'>,
    ]),
    'supported_features': <LightEntityFeature: 44>,
    'xy_color': None,
  })
# ---
# name: test_device_types[color_unsupported][color_unsupported_nightlight_entity]
  ReadOnlyDict({
    'color_mode': <ColorMode.ONOFF: 'onoff'>,
    'flowing': False,
    'friendly_name': 'Yeelight Color 0x15243f Nightlight',
    'music_mode': False,
    'night_light': True,
    'supported_color_modes': list([
      <ColorMode.ONOFF: 'onoff'>,
    ]),
    'supported_features': <LightEntityFeature: 0>,
  })
# ---
# name: test_device_types[default]
  ReadOnlyDict({
    'brightness': 128,
    'color_mode': <ColorMode.BRIGHTNESS: 'brightness'>,
    'effect': None,
    'effect_list': list([
      'Disco',
      'Strobe epilepsy!',
      'Alarm',
      'Police2',
      'WhatsApp',
      'Facebook',
      'Twitter',
      'Home',
      'Candle Flicker',
      'Tea Time',
      'Slow Temp',
      'Stop',
    ]),
    'flowing': False,
    'friendly_name': 'Yeelight Color 0x15243f',
    'music_mode': False,
    'night_light': False,
    'supported_color_modes': list([
      <ColorMode.BRIGHTNESS: 'brightness'>,
    ]),
    'supported_features': <LightEntityFeature: 44>,
  })
# ---
# name: test_device_types[white]
  ReadOnlyDict({
    'brightness': 128,
    'color_mode': <ColorMode.BRIGHTNESS: 'brightness'>,
    'effect': None,
    'effect_list': list([
      'Disco',
      'Strobe epilepsy!',
      'Alarm',
      'Police2',
      'WhatsApp',
      'Facebook',
      'Twitter',
      'Home',
      'Candle Flicker',
      'Tea Time',
      'Slow Temp',
      'Stop',
    ]),
    'flowing': False,
    'friendly_name': 'Yeelight Color 0x15243f',
    'music_mode': False,
    'night_light': False,
    'supported_color_modes': list([
      <ColorMode.BRIGHTNESS: 'brightness'>,
    ]),
    'supported_features': <LightEntityFeature: 44>,
  })
# ---
# name: test_device_types[whitetemp]
  ReadOnlyDict({
    'brightness': 128,
    'color_mode': <ColorMode.COLOR_TEMP: 'color_temp'>,
    'color_temp_kelvin': 4000,
    'effect': None,
    'effect_list': list([
      'Slow Temp',
      'Stop',
    ]),
    'flowing': False,
    'friendly_name': 'Yeelight Color 0x15243f',
    'hs_color': tuple(
      26.812,
      34.87,
    ),
    'max_color_temp_kelvin': 6500,
    'min_color_temp_kelvin': 2700,
    'music_mode': False,
    'night_light': False,
    'rgb_color': tuple(
      255,
      206,
      166,
    ),
    'supported_color_modes': list([
      <ColorMode.COLOR_TEMP: 'color_temp'>,
    ]),
    'supported_features': <LightEntityFeature: 44>,
    'xy_color': tuple(
      0.42,
      0.365,
    ),
  })
# ---
# name: test_device_types[whitetemp][whitetemp_nightlight_entity]
  ReadOnlyDict({
    'brightness': 59,
    'color_mode': <ColorMode.BRIGHTNESS: 'brightness'>,
    'flowing': False,
    'friendly_name': 'Yeelight Color 0x15243f Nightlight',
    'music_mode': False,
    'night_light': True,
    'supported_color_modes': list([
      <ColorMode.BRIGHTNESS: 'brightness'>,
    ]),
    'supported_features': <LightEntityFeature: 0>,
  })
# ---
# name: test_device_types[whitetemp][whitetemp_nightlight_mode]
  ReadOnlyDict({
    'brightness': 59,
    'color_mode': <ColorMode.COLOR_TEMP: 'color_temp'>,
    'color_temp_kelvin': 2700,
    'effect': None,
    'effect_list': list([
      'Slow Temp',
      'Stop',
    ]),
    'flowing': False,
    'friendly_name': 'Yeelight Color 0x15243f',
    'hs_color': tuple(
      28.395,
      65.723,
    ),
    'max_color_temp_kelvin': 6500,
    'min_color_temp_kelvin': 2700,
    'music_mode': False,
    'night_light': True,
    'rgb_color': tuple(
      255,
      167,
      87,
    ),
    'supported_color_modes': list([
      <ColorMode.COLOR_TEMP: 'color_temp'>,
    ]),
    'supported_features': <LightEntityFeature: 44>,
    'xy_color': tuple(
      0.525,
      0.388,
    ),
  })
# ---
# name: test_device_types[whitetempmood]
  ReadOnlyDict({
    'brightness': 128,
    'color_mode': <ColorMode.COLOR_TEMP: 'color_temp'>,
    'color_temp_kelvin': 4000,
    'effect': None,
    'effect_list': list([
      'Slow Temp',
      'Stop',
    ]),
    'flowing': False,
    'friendly_name': 'Yeelight Color 0x15243f',
    'hs_color': tuple(
      26.812,
      34.87,
    ),
    'max_color_temp_kelvin': 6500,
    'min_color_temp_kelvin': 2700,
    'music_mode': False,
    'night_light': False,
    'rgb_color': tuple(
      255,
      206,
      166,
    ),
    'supported_color_modes': list([
      <ColorMode.COLOR_TEMP: 'color_temp'>,
    ]),
    'supported_features': <LightEntityFeature: 44>,
    'xy_color': tuple(
      0.42,
      0.365,
    ),
  })
# ---
# name: test_device_types[whitetempmood][whitetempmood_nightlight_entity]
  ReadOnlyDict({
    'brightness': 59,
    'color_mode': <ColorMode.BRIGHTNESS: 'brightness'>,
    'flowing': False,
    'friendly_name': 'Yeelight Color 0x15243f Nightlight',
    'music_mode': False,
    'night_light': True,
    'supported_color_modes': list([
      <ColorMode.BRIGHTNESS: 'brightness'>,
    ]),
    'supported_features': <LightEntityFeature: 0>,
  })
# ---
# name: test_device_types[whitetempmood][whitetempmood_nightlight_mode]
  ReadOnlyDict({
    'brightness': 59,
    'color_mode': <ColorMode.COLOR_TEMP: 'color_temp'>,
    'color_temp_kelvin': 2700,
    'effect': None,
    'effect_list': list([
      'Slow Temp',
      'Stop',
    ]),
    'flowing': False,
    'friendly_name': 'Yeelight Color 0x15243f',
    'hs_color': tuple(
      28.395,
      65.723,
    ),
    'max_color_temp_kelvin': 6500,
    'min_color_temp_kelvin': 2700,
    'music_mode': False,
    'night_light': True,
    'rgb_color': tuple(
      255,
      167,
      87,
    ),
    'supported_color_modes': list([
      <ColorMode.COLOR_TEMP: 'color_temp'>,
    ]),
    'supported_features': <LightEntityFeature: 44>,
    'xy_color': tuple(
      0.525,
      0.388,
    ),
  })
# ---
